<resources>
    <string name="app_name" translatable="false">VCall</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_recents">Recents</string>
    <string name="tab_coins">Coins</string>
    <string name="loading">Loading…</string>
    <string name="net_error">Service is unavailable,please try later</string>
    <string name="tip_rate">How do you feel about us? Is this app worth 5-STAR? </string>
    <string name="side_invite_friends">Invite Friends</string>
    <string name="side_call_rate">Call Rate</string>
    <string name="side_send_feedback">Send Feedback</string>
    <string name="side_rate_us">Rate Us</string>
    <string name="side_settings">Settings</string>
    <string name="hint_search_contacts">Search for contacts</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="agreement">Privacy Agreement</string>
    <string name="about_title">About VCallFree</string>
    <string name="about_content">Our products are designed to help you work efficiently and entertain, keep your content organized, help you get answers, keep in touch with others, and develop. Learn more. Download on the App Store and download on Google Play.</string>
    <string name="setting_play_dial_tone">Play dial tone</string>
    <string name="setting_display_key_vib">Dialpad key vibration</string>
    <string name="setting_call">Call</string>
    <string name="setting_other">Other</string>
    <string name="setting_about_us">About us</string>
    <string name="setting_privacy_agreement">Privacy Agreement</string>
    <string name="choose_country">Choose Country</string>
    <string name="coin_balance">Coin Balance</string>
    <string name="call_rate">Call Rate</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="choose_a_type">Choose a type</string>
    <string name="please_enter_your_suggestion">Please enter your suggestion</string>
    <string name="set_phone_number">Set Phone Number</string>
    <string name="call_result">Call Result</string>
    <string name="call_detail">Call Detail</string>
    <string name="coin_cost">Coin Cost</string>
    <string name="call_duration">Call Duration</string>
    <string name="invite_text">Hi,highly recommended Free Call to you,no charged required to call your family &amp; friends,Download from Google Play NOW,https://play.google.com/store/apps/details?id=vcall.free.international.phone.wifi.calling&amp;referrer=%s</string>
    <string name="how_do_you_feel">How do you feel about us?</string>
    <string name="hated">Hated</string>
    <string name="like">Like</string>
    <string name="tip_phone_is_empty">The phone number is invalid</string>
    <string name="tip_code_is_empty">The code is empty</string>
    <string name="tip_auth_fail">Failed to get auth code,please check your network</string>
    <string name="tip_select_subject">Please choose a type</string>
    <string name="tip_open_notification">You haven\'t grant SHOW NOTIFICATION permission,grant now?</string>
    <string name="tip_invalid_number">Invalid phone number</string>
    <string name="tip_ad_click_limit">Please do not click on ads that you are not interested in. This may cause you to miss to earn more points.</string>
    <string name="tip_vpn">Note: Do not use the "Virtual Private Network" software, it may cause you to lose points or even the  account to be disabled.</string>
    <string name="tip_reward_video">Watch this video ad now to earn 10~500 points, Good luck.</string>
    <string name="agree">Agree</string>
    <string name="quit">Quit</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="reward_video_points">+10~500</string>
    <string name="close">Close</string>
    <string name="check_in">Check in</string>
    <string name="don_t_forget_to_set_phone_number">Don\'t forget to set phone number</string>
    <string name="don_t_forget_to_check_in">Don\'t forget to check in</string>
    <string name="don_t_forget_to_get_more_credits">Don\'t forget to get more credits</string>
    <string name="set_now">Set Now</string>
    <string name="more_credits">More Credits</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="lucky_credits">Lucky Credits</string>
    <string name="reward_video">Reward video</string>
    <string name="invite_friends">Invite friends</string>
    <string name="delete_call_record" translatable="false">Do you want to delete this record?</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="more_menu" translatable="false">more</string>
    <string name="privacy_settings" translatable="false">Privacy Settings</string>
</resources>
