<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_avatar_title_bar"
        app:contentInsetStartWithNavigation="0dp"
        app:titleMarginStart="0dp"
        app:title="@string/app_name"
        app:titleTextColor="@color/text_normal"/>

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_bar_height"
            android:orientation="horizontal"
            android:paddingTop="3dp"
            android:background="@color/colorPrimary">
            <RadioButton
                android:id="@+id/radio_contacts"
                style="@style/Tab"
                android:checked="true"
                android:drawableTop="@drawable/tab_contacts"
                android:text="@string/tab_contacts"/>
            <RadioButton
                android:id="@+id/radio_recents"
                style="@style/Tab"
                android:drawableTop="@drawable/tab_recents"
                android:text="@string/tab_recents"/>
            <RadioButton
                android:id="@+id/radio_coins"
                style="@style/Tab"
                android:drawableTop="@drawable/tab_coins"
                android:text="@string/tab_coins"/>
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/side_header"
        android:background="@color/side_bg"
        app:menu="@menu/navigation_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>