<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="vcall.free.international.phone.wifi.calling.ui.SettingActivity" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_dial_back_arrow"
            app:contentInsetStartWithNavigation="0dp"
            app:titleMarginStart="0dp"
            app:title="@string/setting"
            app:titleTextColor="@color/text_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_search"
            android:textSize="12sp"
            android:text="@string/setting_call"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_setting_item"
            android:layout_margin="14dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                android:text="@string/setting_play_dial_tone"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_play_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/blue"
                android:checked="true"
                android:layout_gravity="center_vertical|end"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_setting_item"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                android:text="@string/setting_display_key_vib"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/blue"
                android:checked="true"
                android:layout_gravity="center_vertical|end"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_search"
            android:textSize="12sp"
            android:text="@string/setting_other"/>


        <FrameLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_setting_item"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="14dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:onClick="@{activity::onClick}">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                android:text="@string/setting_about_us"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/blue"
                android:src="@drawable/ic_arrow_right"
                android:layout_gravity="center_vertical|end"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/agreement"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_setting_item"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="14dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:onClick="@{activity::onClick}">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                android:text="@string/setting_privacy_agreement"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/blue"
                android:src="@drawable/ic_arrow_right"
                android:layout_gravity="center_vertical|end"/>
        </FrameLayout>
    </LinearLayout>
</layout>