<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="version"
            type="String" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_dial_back_arrow"
            app:contentInsetStartWithNavigation="0dp"
            app:titleMarginStart="0dp"
            app:title="@string/about"
            app:titleTextColor="@color/text_normal" />


        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/text_dark"
            android:layout_marginTop="16dp"
            android:text="@{`Version ` + version}"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/text_yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/about_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/about_content" />
    </LinearLayout>
</layout>