<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dialog"
            type="vcall.free.international.phone.wifi.calling.ui.ExitDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:text="@string/don_t_forget_to_set_phone_number" />

        <FrameLayout
            android:id="@+id/adContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--        <com.google.android.ads.nativetemplates.TemplateView-->
<!--            android:id="@+id/templateView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="invisible"-->
<!--            app:gnt_template_type="@layout/gnt_medium_template_view" />-->

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:visibility="gone"
            android:layout_gravity="center"/>

        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setNowTv"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:text="@string/set_now"
                android:onClick="@{() -> dialog.setNow()}"/>

            <TextView
                android:id="@+id/exit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:text="@string/exit"
                android:onClick="@{() -> dialog.exit()}"/>
        </LinearLayout>
    </LinearLayout>
</layout>