<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="ufree.call.international.phone.wifi.vcallfree.ui.FeedbackActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_dial_back_arrow"
            app:contentInsetStartWithNavigation="0dp"
            app:titleMarginStart="0dp"
            app:title="@string/side_send_feedback"
            app:titleTextColor="@color/text_normal" />


        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_margin="14dp"
            android:background="@drawable/bg_feedback_input"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:gravity="top"
            android:textColor="@color/text_search"
            android:textColorHint="@color/text_search"
            android:textSize="12sp"
            android:hint="@string/please_enter_your_suggestion" />

        <TextView
            android:id="@+id/choose_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp"
            android:textSize="12sp"
            android:textColor="@color/text_search"
            android:text="@string/choose_a_type" />

        <TextView
            android:id="@+id/item1"
            style="@style/FeedbackItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_type"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:text="I can't make call"
            android:onClick="@{activity::selectItem}"/>

        <TextView
            android:id="@+id/item2"
            style="@style/FeedbackItem"
            app:layout_constraintStart_toEndOf="@id/item1"
            app:layout_constraintTop_toBottomOf="@id/choose_type"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:text="I lost some coins"
            android:onClick="@{activity::selectItem}"/>

        <TextView
            android:id="@+id/item3"
            style="@style/FeedbackItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item1"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:text="Can't use Lucky wheel/Reward video/Check-in"
            android:onClick="@{activity::selectItem}"/>

        <TextView
            android:id="@+id/item4"
            style="@style/FeedbackItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item3"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:text="Other..."
            android:onClick="@{activity::selectItem}"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/item4"
            android:background="@drawable/bg_blue_round"
            android:layout_marginTop="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ECF1FF"
            android:text="Submit feedback"
            android:onClick="@{() -> activity.submit()}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:textSize="12sp"
            android:textColor="@color/text_yellow"
            android:text="Notice: Help us to fix problems will earn up to
100,000 COINS!" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>