<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dialog"
            type="ufree.call.international.phone.wifi.vcallfree.ui.CallDialog" />
        <variable
            name="country"
            type="ufree.call.international.phone.wifi.vcallfree.api.Country" />
        <variable
            name="date"
            type="String" />
        <variable
            name="phone"
            type="String" />
        <variable
            name="points"
            type="Integer" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="32dp">

        <ImageView
            android:id="@+id/flag"
            android:layout_width="26dp"
            android:layout_height="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:flag="@{country.iso}"/>
        <TextView
            android:id="@+id/iso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/flag"
            app:layout_constraintTop_toTopOf="@id/flag"
            app:layout_constraintBottom_toBottomOf="@id/flag"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:text="@{country.iso}"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iso"
            app:layout_constraintTop_toTopOf="@id/flag"
            app:layout_constraintBottom_toBottomOf="@id/flag"
            android:layout_marginStart="16dp"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:text="@{date}"/>

        <TextView
            android:id="@+id/phoneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flag"
            android:layout_marginTop="32dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:text="@{`+` + country.code +  phone}"/>

        <TextView
            android:id="@+id/coin_balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneTv"
            android:layout_marginTop="30dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_coin2"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            android:text="@string/coin_balance"/>
        <TextView
            android:id="@+id/coin_rate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coin_balance_tv"
            android:layout_marginTop="30dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_call_rate"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            android:text="@string/call_rate"/>
        <TextView
            android:id="@+id/time_remaining_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coin_rate_tv"
            android:layout_marginTop="30dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_call_time_remaining"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            android:text="@string/time_remaining"/>

        <TextView
            android:id="@+id/coin_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/coin_balance_tv"
            app:layout_constraintBottom_toBottomOf= "@id/coin_balance_tv"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:text="@{String.valueOf(points)}"/>

        <TextView
            android:id="@+id/call_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/coin_rate_tv"
            app:layout_constraintBottom_toBottomOf= "@id/coin_rate_tv"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/time_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/time_remaining_tv"
            app:layout_constraintBottom_toBottomOf= "@id/time_remaining_tv"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>
        
        <Button
            android:id="@+id/call"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/time_remaining_tv"
            android:background="@drawable/bg_blue_round"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ECF1FF"
            android:text="CALL"
            android:onClick="@{dialog::call}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>